# ISA-Branch-Predictor

./: CMakeLists.txt
src/: TAGE.h  main.c  predictor  predictor.c  predictor.h
